[gd_scene load_steps=7 format=2]

[ext_resource path="res://3D/Ennemies/Turret/Scripts/TurretFire.gd" type="Script" id=1]
[ext_resource path="res://3D/Ennemies/Turret/Obj/TurretBase.obj" type="ArrayMesh" id=2]
[ext_resource path="res://3D/Ennemies/Turret/Obj/TurretProbe.obj" type="ArrayMesh" id=3]

[sub_resource type="SphereShape" id=1]
radius = 0.2

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.075, 0.075, 0.1 )

[sub_resource type="CylinderShape" id=3]
radius = 0.25
height = 0.15

[node name="Turret" type="Spatial"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="TurretBase" type="MeshInstance" parent="."]
layers = 2147483652
mesh = ExtResource( 2 )
material/0 = null

[node name="TurretProbe" type="MeshInstance" parent="TurretBase"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.4, 0 )
layers = 7
mesh = ExtResource( 3 )
material/0 = null
material/1 = null

[node name="StaticBody" type="StaticBody" parent="TurretBase/TurretProbe"]

[node name="CollisionShape" type="CollisionShape" parent="TurretBase/TurretProbe/StaticBody"]
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="TurretBase/TurretProbe/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.27 )
shape = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="TurretBase"]

[node name="CollisionShape" type="CollisionShape" parent="TurretBase/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.075, 0 )
shape = SubResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
